--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ near-sdk = "4.1.1"
 near-contract-standards = "4.1.1"
 uint = { version = "0.9.3", default-features = false }
 bincode = "1.0"
+ed25519-dalek = "1.0.1"
 
 [profile.release]
 codegen-units = 1
